# AWS-Collibra-DQ

./: .coverage  CLAUDE.md  CONTRIBUTING.md  README.md  env.example  pyproject.toml
.github/workflows/: deploy.yml  validate.yml
assets/: collibra-dq-architecture.drawio  collibra-dq-operations-flow_1.drawio
docs/: testing-strategy.md
docs/adr/: ADR-001-cli-first-orchestration.md  ADR-002-environment-driven-configuration.md  ADR-003-stack-scoped-backend.md  ADR-004-shared-artifact-and-install-script-buckets.md  ADR-005-cost-optimized-dev-defaults.md  ADR-006-http-only-alb-by-default.md  ADR-007-standalone-hook-opt-in.md  ADR-008-service-health-over-bootstrap-status.md  ADR-C1-standalone-ec2-deployment-model.md  ADR-C2-shared-package-and-env-script.md  ADR-C3-http-first-ingress.md  ADR-C4-health-driven-acceptance.md  ADR-M1-generic-s3-module.md  ADR-M2-versioning-enabled-by-default.md  ADR-S1-lifecycle-domains-by-ownership.md  ADR-S2-cli-default-operating-model.md  ADR-S3-full-deploy-owns-attachment-ordering.md  README.md
env/: README.md
env/stack/: README.md
env/stack/collibra-dq/: README.md  root.hcl
module/application/collibra-dq-standalone/: README.md  main.tf  outputs.tf  variables.tf
module/network/vpc/: README.md  main.tf
module/network/vpc-endpoints/: README.md
module/storage/s3-package/: main.tf  (+3 more)
src/collibra_dq_starter/: __init__.py  cli.py  orchestrator.py
tests/: conftest.py
tests/integration/: test_iac_validation.py
tests/regression/: test_orchestrator_regressions.py
tests/unit/: test_cli.py  test_orchestrator_unit.py  test_shell.py
(+42 files in other folders)
